<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brown"
    android:orientation="vertical"
    tools:context=".ProfileScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp">
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="88dp"
                android:layout_height="88dp"
                android:src="@drawable/avatar"
                android:scaleType="centerCrop"
                android:background="@drawable/circleimage"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/edit"
                android:textColor="#2B70A8"
                android:textFontWeight="700"
                android:textSize="14sp"
                android:lineHeight="16.71dp"/>

        </LinearLayout>
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="vertical">
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textColor="@color/white"
                android:textFontWeight="700"
                android:textSize="24sp"
                android:lineHeight="28.64dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/useremail"
                android:textColor="#A8A8A8"
                android:textFontWeight="400"
                android:textSize="14sp"
                android:lineHeight="18sp"
        </LinearLayout>
    
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="44dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/comments"/>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/discussion"
            android:textColor="@color/white"
            android:textFontWeight="700"
            android:textSize="14sp"
            android:lineHeight="16.71dp"/>

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow"
            android:layout_marginEnd="16dp"
            android:scaleType="centerCrop"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/clock_five"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/history"
            android:textColor="@color/white"
            android:textFontWeight="700"
            android:textSize="14sp"
            android:lineHeight="16.71dp"/>

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow"
            android:layout_marginEnd="16dp"
            android:scaleType="centerCrop"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/cog"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:textFontWeight="700"
            android:textSize="14sp"
            android:lineHeight="16.71dp"/>

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow"
            android:layout_marginEnd="16dp"
            android:scaleType="centerCrop"/>

    </LinearLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="2" />

    <LinearLayout
        android:layout_width="343dp"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_corners">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/exit"
            android:textColor="#2B70A8"
            android:textFontWeight="700"
            android:textSize="14sp"
            android:lineHeight="18dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="93.75dp"
            android:layout_height="58.81dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/tv"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main"
                android:textFontWeight="500"
                android:textSize="10sp"
                android:lineHeight="11.93dp"
                android:textAlignment="center"
                android:textColor="#2B70A8"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="93.75dp"
            android:layout_height="58.81dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/windows"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main"
                android:textFontWeight="500"
                android:textSize="10sp"
                android:lineHeight="11.93dp"
                android:textAlignment="center"
                android:textColor="#757575"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="93.75dp"
            android:layout_height="58.81dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/star"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/collection"
                android:textFontWeight="500"
                android:textSize="10sp"
                android:lineHeight="11.93dp"
                android:textAlignment="center"
                android:textColor="#757575"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="93.75dp"
            android:layout_height="58.81dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/profile"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:textFontWeight="500"
                android:textSize="10sp"
                android:lineHeight="11.93dp"
                android:textAlignment="center"
                android:textColor="#757575"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>