<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brown"
    android:orientation="vertical"
    tools:context=".signin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp">
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="167dp"
        android:layout_height="167dp"
        android:orientation="vertical"
        android:layout_marginTop="92dp"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/movie"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="247dp"
        android:layout_height="27.46dp"
        android:layout_marginTop="12.54dp"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/worldcinema"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="343dp"
        android:layout_height="44dp"
        android:layout_marginTop="71dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/rounded_corners">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="sans-serif"
            android:hint="@string/email"
            android:textSize="14sp"
            android:lineHeight="18dp"
            android:textFontWeight="400"
            android:textColorHint="#AFAFAF"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="343dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:background="@drawable/rounded_corners">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="sans-serif"
            android:hint="@string/password"
            android:textSize="14sp"
            android:lineHeight="18dp"
            android:textFontWeight="400"
            android:textColorHint="#AFAFAF"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="343dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:background="#2B70A8">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:fontFamily="sans-serif-medium"
            android:lineHeight="16dp"
            android:text="@string/enter"
            android:textFontWeight="700"
            android:textSize="14sp"
            android:textColor="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="343dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:background="@drawable/rounded_corners">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:fontFamily="sans-serif-medium"
            android:lineHeight="18dp"
            android:text="@string/register"
            android:textFontWeight="700"
            android:textSize="14sp"
            android:textColor="#2B70A8"/>
    </LinearLayout>

</LinearLayout>