<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brown"
    android:orientation="vertical"
    tools:context=".MainScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp">
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lineHeight="28.64dp"
            android:text="@string/captain"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textFontWeight="700"
            android:textSize="24sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="327dp"
        android:layout_height="486dp"
        android:layout_marginTop="24dp"
        android:layout_gravity="center"
        android:background="@drawable/rounded_corners2">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/image1"
            android:scaleType="centerCrop"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="90dp">

        <LinearLayout
            android:layout_width="93.75dp"
            android:layout_height="58.81dp"
            android:gravity="center"
            android:orientation="vertical">
            
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/tv"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main"
                android:textFontWeight="500"
                android:textSize="10sp"
                android:lineHeight="11.93dp"
                android:textAlignment="center"
                android:textColor="#2B70A8"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="93.75dp"
            android:layout_height="58.81dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/windows"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main"
                android:textFontWeight="500"
                android:textSize="10sp"
                android:lineHeight="11.93dp"
                android:textAlignment="center"
                android:textColor="#757575"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="93.75dp"
            android:layout_height="58.81dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/star"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/collection"
                android:textFontWeight="500"
                android:textSize="10sp"
                android:lineHeight="11.93dp"
                android:textAlignment="center"
                android:textColor="#757575"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="93.75dp"
            android:layout_height="58.81dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/profile"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:textFontWeight="500"
                android:textSize="10sp"
                android:lineHeight="11.93dp"
                android:textAlignment="center"
                android:textColor="#757575"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>